# qontract-development-cli

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  build_deploy.sh  pr_check.sh  pyproject.toml  setup.cfg
.github/workflows/: release.yaml
.tekton/: main-pull-request.yaml  main-push.yaml  qontract-development-cli-main-pull-request.yaml  qontract-development-cli-main-push.yaml
demo/: qd_config_init.tape  qd_profile_create.tape
examples/: README.md  github.yml  glitchtip-access-reporter.yml  glitchtip.yml  qontract-cli-saas-targets.yml  run-prometheus-test.yml  terraform-resources-image-builder-stage.yml
qontract_development/: cli.py  config.py  models.py  shell.py  utils.py
qontract_development/commands/: config.py  env.py  profile.py
qontract_development_cli/: __main__.py  cli.py  completions.py  config.py  models.py  shell.py  templates.py  utils.py  watchdog.py
qontract_development_cli/commands/: config.py  env.py  profile.py
qontract_development_cli/templates/: api.yml.j2  cache.yml.j2  compose.override.yml.j2  compose.yml.j2  internal-redhat-ca.yml.j2  opa.yml.j2  prep-worktree.sh.j2  reconcile.yml.j2  server.yml.j2  subscriber.yml.j2  vault.yml.j2  worker.yml.j2
test/: test_config.py
tests/: test_reconcile_template.py
