[tool.poetry]
name = "qontract-development-cli"
version = "0.14.2"
description = "Helper tool for qontract-reconcile development"
authors = ["Christian Assing <cassing@redhat.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/chassing/qontract-development-cli"
homepage = "http://github.com/chassing/qontract-development-cli"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Jinja2 = "^3.1.2"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^1.10.2"
appdirs = "^1.4.4"
PyYAML = "^6.0.1"
getkey = "^0.6.5"
watchfiles = "^0.21.0"

[tool.poetry.dev-dependencies]
types-PyYAML = "^6.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.11"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qd = "qontract_development_cli.__main__:app"

[tool.mypy]
plugins = "pydantic.mypy"
enable_error_code = "truthy-bool, redundant-expr"
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["getkey.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.11.1"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
major_version_zero = true
change_type_map = { "feat" = "Features", "fix" = "Bug Fixes" }
tag_format = "v$version"

[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.2.1"
src = ["qontract_development_cli"]
extend-exclude = [".local", ".cache"]
fix = true

[tool.ruff.lint]
preview = true
# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["qontract_development_cli"]
