[project]
name = "qontract-development-cli"
version = "0.15.6"
description = "Helper tool for qontract-reconcile development"
authors = [{ name = "Christian Assing", email = "cassing@redhat.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "appdirs ~=1.4.4",
    "getkey ~=0.6.5",
    "jinja2 ~=3.1",
    "pydantic ~=2.9",
    "pydantic-settings ~=2.6",
    "pyyaml ~=6.0.2",
    "rich ~=14.0",
    "typer ~=0.16.0",
    "watchfiles ~=1.1.0",
]

[dependency-groups]
dev = ["mypy ~=1.13", "ruff ~=0.7", "types-pyyaml ~=6.0"]
[project.urls]
homepage = "http://github.com/chassing/qontract-development-cli"
repository = "http://github.com/chassing/qontract-development-cli"
documentation = "http://github.com/chassing/qontract-development-cli"

[project.scripts]
qd = "qontract_development_cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["qontract_development_cli"]

[tool.hatch.build.targets.wheel]
only-include = ["qontract_development_cli"]

[tool.mypy]
files = ["qontract_development_cli"]
plugins = "pydantic.mypy"
enable_error_code = "truthy-bool, redundant-expr"
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["getkey.*", "appdirs.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["qontract_development_cli"]
extend-exclude = [".local", ".cache"]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401", # Disallow *args, **kwargs with ANY
    "ARG003", # Unusable arguments
    "CPY",    # Missing copyright header
    "D10",    # docstrings
    "D203",   # 1 blank line required before class docstring
    "D211",   # No blank lines allowed before class docstring
    "D212",   # multi-line-summary-first-line
    "D213",   # multi-line-summary-second-line
    "D4",     # Doc string style
    "E501",   # Line too long
    "G004",   # Logging statement uses string formatting
    "S101",   # Use of assert detected. Pytest uses assert
    "EM101",
    "EM102",
    "S404",   # subprocess possibly insecure
    "S603",   # subprocess check user input
    "S607",   # subprocess partical executable path
    "TID252", # relative imports
    "TRY003",
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["qontract_development_cli"]
